--- a/process/stage_one/module_four/springbootblog/src/main/resources/templates/client/index.html
+++ b/process/stage_one/module_four/springbootblog/src/main/resources/templates/client/index.html
@@ -10,7 +10,7 @@
 
 
         <!-- 文章遍历并分页展示 : 需要同学们手动完成，基本样式已经给出，请使用th标签及表达式完成页面展示 -->
-        <div th:each="">
+        <div th:each="article:${articlePageList}">
             <article class="am-g blog-entry-article">
 
                 <div class="am-u-lg-6 am-u-md-12 am-u-sm-12 blog-entry-text">
@@ -18,16 +18,48 @@
                     <span class="blog-color"style="font-size: 15px;"><a>默认分类</a></span>
                     <span>&nbsp;&nbsp;&nbsp;</span>
                     <!-- 发布时间 -->
-                    <span style="font-size: 15px;" th:text="'发布于 '+ ${}" />
+                    <span style="font-size: 15px;" th:text="'发布于 '+ ${article.created}" />
                     <h2>
                         <!-- 文章标题 -->
-                        <div><a style="color: #0f9ae0;font-size: 20px;" th:text="${}" />
+                        <div><a style="color: #0f9ae0;font-size: 20px;" th:text="${article.getTitle()}" />
                         </div>
                     </h2>
                     <!-- 文章内容-->
-                    <div style="font-size: 16px;" th:text="${}" />
+                    <div style="font-size: 16px;" th:text="${article.getContent()}" />
                 </div>
             </article>
+        </div>
+
+
+        <div class="modal-footer">
+            <ul class="am-pagination">
+                <!-- 首页 -->
+                <li >
+                    <a th:href="'/list?page=0'">首页</a>
+                </li>
+
+                <!-- 上一页 -->
+                <li th:if="${articlePageList.hasPrevious()}">
+                    <a th:href="'/list?page=' + ${articlePageList.previousPageable().getPageNumber()}" th:text="上一页"></a>
+                </li>
+
+                <!-- 中间页 -->
+                <li th:each="page:${#numbers.sequence(0, articlePageList.getTotalPages() - 1)}">
+                    <a th:href="'/list?page=' + ${page}" th:text="${page + 1}" th:if="${page ne articlePageList.pageable.getPageNumber()}"></a>
+                    <a th:href="'/list?page=' + ${page}" th:text="${page + 1}" th:if="${page eq articlePageList.pageable.getPageNumber()}" th:style="'font-weight:bold;background: #6faed9;'"></a>
+                </li>
+
+                <!-- 下一页 -->
+                <li th:if="${articlePageList.hasNext()}">
+                    <a th:href="'/list?page=' + ${articlePageList.nextPageable().getPageNumber()}" th:text="下一页"></a>
+                </li>
+
+                <!-- 尾页 -->
+                <li>
+                    <a th:href="'/list?page=' + ${articlePageList.getTotalPages() - 1}">尾页</a>
+                </li>
+
+            </ul>
         </div>
 
 
